DevOCL/src/objects/CLQ_Standard_Findings__c.object
<CustomObject>
    <fields>
        <fullName>CLQ_Action_Required__c</fullName>
        <label>Action Required</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Additional_Description__c</fullName>
        <label>Additional Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Domain_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Domain Rule</label>
        <referenceTo>CLQ_Domain_Rule__c</referenceTo>
        <relationshipLabel>Standard Findings</relationshipLabel>
        <relationshipName>Standard_Findings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for Standard Findings object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_Finding_Code__c</fullName>
        <description>Unique Code per associated with the finding</description>
        <label>Finding Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Finding_Effective_Date__c</fullName>
        <label>Finding Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Finding_Expiration_Date__c</fullName>
        <label>Finding Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Finding_Type__c</fullName>
        <label>Type of Finding</label>
        <picklist>
            <picklistValues>
                <fullName>Non-Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documenting Statement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Risk_Level__c</fullName>
        <label>Risk Level</label>
        <picklist>
            <picklistValues>
                <fullName>Serious</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Rules__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rules</label>
        <referenceTo>CLQ_Rule__c</referenceTo>
        <relationshipLabel>Standard Findings</relationshipLabel>
        <relationshipName>Standard_Findings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Standard Findings</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Standard Finding</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Standard Findings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>